<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75sp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/recordID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textStyle="bold"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="20sp"
        />


    <TextView
        android:id="@+id/recordScaling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scale"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="20sp"
        />


    <TextView
        android:id="@+id/recordTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_margin="20sp"
        />


</LinearLayout>